<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_maingame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAll"
    android:orientation="vertical"
    tools:context=".playGame.MainGameComputer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/layout_middle"
        app:layout_constraintTop_toTopOf="parent"
        >

            <TextView
                android:id="@+id/textHomeFix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mulai_bermain"

                android:textColor="#000"
                android:textSize="25sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="27dp" />


        <ImageButton
            android:id="@+id/but_close"
            android:layout_width="57dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_home"
            android:contentDescription="$string/close"
            app:layout_constraintTop_toBottomOf="@id/textHomeFix"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp" />


        <TextView
            android:id="@+id/Menu"
            android:layout_width="136dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Menu"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/but_close"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="91dp" />

        <ImageView
            android:id="@+id/logoImageGame"
            android:layout_width="106dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/logo_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_middle"
        android:layout_width="412dp"
        android:layout_height="392dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="-8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="24dp"
                android:textColor="#00BCD4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundBatu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/batuPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_batu_but"
                    android:contentDescription="@string/rock_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundPaper"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/paperPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_paper_but"
                    android:contentDescription="@string/paper_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundScissors"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/scissorsPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_scissors_but"
                    android:contentDescription="@string/scissors_icon" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageBattle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:contentDescription="@string/versus_image"
                android:src="@drawable/ic_battle_image" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="24dp"
                android:textColor="#00BCD4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundBatuComp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/batuComp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_batu_but"
                    android:contentDescription="@string/rock_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundPaperComp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/paperComp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_paper_but"
                    android:contentDescription="@string/paper_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/backgroundScissorsComp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_shape" />

                <ImageButton
                    android:id="@+id/scissorsComp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_scissors_but"
                    android:contentDescription="@string/scissors_icon" />
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>